--- a/views/dish/dishDetails.ejs
+++ b/views/dish/dishDetails.ejs
@@ -7,8 +7,8 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
         integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
-    <script defer src="../public/javascripts/dish.js"></script>
-    <script defer src="../public/javascripts/dishFuncions.js"></script>
+    <script defer src="../../public/javascripts/dish.js"></script>
+
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
@@ -23,7 +23,7 @@
 </head>
 
 <body>
-    <%- include ("partials/navigation.ejs"); %>
+    <%- include ("../partials/navigation.ejs"); %>
 
     <div class="container">
         <div class="infoPage">
@@ -93,7 +93,7 @@
 
 
     </div>
-    <%- include ("partials/footer.ejs"); %>
+    <%- include ("../partials/footer.ejs"); %>
 </body>
 
 
