--- a/views/evaluation/evaluation.ejs
+++ b/views/evaluation/evaluation.ejs
@@ -7,7 +7,6 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
         integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
-    <script defer src="/javascripts/index.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
     <link rel="stylesheet" type="text/css" href="/stylesheets/style.css" />
@@ -16,7 +15,7 @@
 </head>
 
 <body>
-    <%- include ("partials/navigation.ejs"); %>
+    <%- include ("../partials/navigation.ejs"); %>
     <main role="main">
         <div class="jumbotronEvaluation center-block">
             <div class="jilorioInfo evaluation">
@@ -44,7 +43,7 @@
                 <hr>
         </div>
     </main>
-    <%- include ("partials/footer.ejs"); %>
+    <%- include ("../partials/footer.ejs"); %>
 </body>
 
 
