--- a/views/recomendation/recomendation.ejs
+++ b/views/recomendation/recomendation.ejs
@@ -7,8 +7,7 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
         integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
-    <script defer src="/javascripts/index.js"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
     <link rel="stylesheet" type="text/css" href="/stylesheets/style.css" />
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.13.0/css/all.css">
@@ -16,26 +15,26 @@
 </head>
 
 <body>
-    <%- include ("partials/navigation.ejs"); %>
+    <%- include ("../partials/navigation.ejs"); %>
     <main role="main">
-        <div class="jumbotronPlanificacion center-block">
-            <div class="jilorioInfo planificacion">
-                <h1 class="display-4"> <%= items.myObject.jilorioInfo[3].planification.title %> </h1>
-                <p><%= items.myObject.jilorioInfo[3].planification.description%></p>
+        <div class="jumbotronRecomendation center-block">
+            <div class="jilorioInfo recomendation">
+                <h1 class="display-4"> <%= items.myObject.jilorioInfo[4].recomendation.title %> </h1>
+                <p><%= items.myObject.jilorioInfo[4].recomendation.description%></p>
             </div>
         </div>
         <div class="container">
             <section class="features-icons text-center">
 
                 <div class="row">
-                    <% for (var i=0; i < items.myObject.planificationIndex.length; i++) { %>
+                    <% for (var i=0; i < items.myObject.recomendationIndex.length; i++) { %>
                     <div class="col-md-4">
                         <div class=" mx-auto mb-5 mb-lg-0 mb-lg-3">
                             <div class="features-icons-icon d-flex">
-                                <i class="<%= items.myObject.planificationIndex[i].icon%> fa-3x m-auto text-info"></i>
+                                <i class="<%= items.myObject.recomendationIndex[i].icon%> fa-3x m-auto text-info"></i>
                             </div>
-                            <h2> <%= items.myObject.planificationIndex[i].name %></h2>
-                            <p class="text-justify"><%= items.myObject.planificationIndex[i].description %> </p>
+                            <h2> <%= items.myObject.recomendationIndex[i].name %></h2>
+                            <p class="text-justify"><%= items.myObject.recomendationIndex[i].description %> </p>
                             <p><a class="btn btn-info" href="#" role="button">Ver más &raquo;</a></p>
                         </div>
                     </div>
@@ -44,7 +43,7 @@
                 <hr>
         </div>
     </main>
-    <%- include ("partials/footer.ejs"); %>
+    <%- include ("../partials/footer.ejs"); %>
 </body>
 
 
