--- a/views/menu/getMenu.ejs
+++ b/views/menu/getMenu.ejs
@@ -26,7 +26,7 @@
     <div class="container">
         <div class="infoPage">
             <i class="fas fa-list-alt fa-2x"></i>
-            <span> <%= items.myObject.infoPage.platos %> </span>
+            <span> <%= items.myObject.infoPage.menu %> </span>
         </div>
 
         <hr>
@@ -44,15 +44,11 @@
         </form>
         <br><br>
 
-
- 
-        <% const  nombres_sz=  items.myObject.tablaPlatos.nombres.length %>
-        <% const  nombres=  items.myObject.tablaPlatos.nombres %>
+        <% const  nombres_sz=  items.myObject.tablaMenu.nombres.length %>
+        <% const  nombres=  items.myObject.tablaMenu.nombres %>
         <% const  docs_sz =   items.myDocs.length %>
         <% const  docs =   items.myDocs %>
-
-     
-
+       
         <table class="table table-striped table-hover">
             <thead class="thead-dark">
                 <tr>
@@ -64,11 +60,18 @@
             <tbody>
                 <tr>
                     <% for (var i=0; i < docs_sz; i++) { %>
-                    <td> <%= docs[i]._id %> </td>
-                    <td> <%= items.myKcal[i] %> </td>
-                    <td> <button type="button" class="btn btn-danger"><a title="Eliminar" href="/dish/delete/<%=docs[i]['_id']%>"> <i class="fas fa-trash-alt"></i></a></button> 
-                        <button type="button" class="btn btn-info"><a title="Ver detalles"  href="/dish/<%=docs[i]['_id']%>"><i class="fas fa-search-plus"></i></a></button> 
-                        <button type="button" class="btn btn-warning"><a title="Editar" href="#"><i class="fas fa-edit"></i></a></button></td>
+                        <td> <%= docs[i]._id %> </td>
+                        <td> 
+                    <% for (var j=0; j < docs[i].dishes.length; j++) { %>
+                        <%=docs[i].dishes[j]._id%>  
+                        <% if( (j+1) < docs[i].dishes.length) {  %> 
+                            <%= "|   "  %>  
+                            <% } %>
+                    <% } %>
+                    <td> <button type="button" class="btn btn-danger"><a title="Eliminar" href="/menu/delete/<%=docs[i]['_id']%>"> <i class="fas fa-trash-alt"></i></a></button> 
+                        <button type="button" class="btn btn-info"><a title="Ver detalles"  href="/menu/<%=docs[i]['_id']%>"><i class="fas fa-search-plus"></i></a></button> 
+                        <button type="button" class="btn btn-warning"><a title="Editar" href="#"><i class="fas fa-edit"></i></a></button></td> 
+                    </td>
                 </tr>
                 <% } %>
             </tbody>
