--- a/views/dish/dishDetails.ejs
+++ b/views/dish/dishDetails.ejs
@@ -46,7 +46,7 @@
             <span><%= items.myObject.ingredientesDish %></span>
         </div>
 
-        <table class="table table-striped table-hover table-sm">
+        <table class="table table-striped table-bordered table-hover table-sm">
             <thead class="thead-dark">
                 <tr>
                     <% for (let i=0; i < items.myObject.dishDetails.length; i++) {%>
@@ -72,7 +72,7 @@
         </div>
         
                    
-        <table class="table table-striped table-hover table-sm nutrientsTab">
+        <table class="table table-striped table-bordered table-hover table-sm nutrientsTab">
 
             <thead class="thead-dark">
                 <tr>
