--- a/views/dish/getDish.ejs
+++ b/views/dish/getDish.ejs
@@ -53,7 +53,7 @@
 
      
 
-        <table class="table table-striped table-hover">
+        <table class="table table-striped table-bordered table-hover">
             <thead class="thead-dark">
                 <tr>
                     <% for (var i=0; i< nombres_sz; i++) { %>
