--- a/views/menu/getMenu.ejs
+++ b/views/menu/getMenu.ejs
@@ -26,7 +26,7 @@
     <div class="container">
         <div class="infoPage">
             <i class="fas fa-list-alt fa-2x"></i>
-            <span> <%= items.myObject.infoPage.menu %> </span>
+            <span> <%= items.myObject.infoPage.menus %> </span>
         </div>
 
         <hr>
@@ -48,8 +48,8 @@
         <% const  nombres=  items.myObject.tablaMenu.nombres %>
         <% const  docs_sz =   items.myDocs.length %>
         <% const  docs =   items.myDocs %>
-       
-        <table class="table table-striped table-hover">
+     
+        <table class="table table-bordered table-striped table-hover table-sm">
             <thead class="thead-dark">
                 <tr>
                     <% for (var i=0; i< nombres_sz; i++) { %>
@@ -64,10 +64,13 @@
                         <td> 
                     <% for (var j=0; j < docs[i].dishes.length; j++) { %>
                         <%=docs[i].dishes[j]._id%>  
+                        
                         <% if( (j+1) < docs[i].dishes.length) {  %> 
                             <%= "|   "  %>  
                             <% } %>
+                  
                     <% } %>
+                    <td><%= items.myNutrientsMenu[i][1] %> </td>
                     <td> <button type="button" class="btn btn-danger"><a title="Eliminar" href="/menu/delete/<%=docs[i]['_id']%>"> <i class="fas fa-trash-alt"></i></a></button> 
                         <button type="button" class="btn btn-info"><a title="Ver detalles"  href="/menu/<%=docs[i]['_id']%>"><i class="fas fa-search-plus"></i></a></button> 
                         <button type="button" class="btn btn-warning"><a title="Editar" href="#"><i class="fas fa-edit"></i></a></button></td> 
