--- a/views/menu/menuDetails.ejs
+++ b/views/menu/menuDetails.ejs
@@ -40,7 +40,7 @@
             <span><%= items.myObject.platosMenu %></span>
         </div>
 
-        <table class="table table-striped table-hover table-sm">
+        <table class="table table-striped table-bordered table-hover table-sm">
             <thead class="thead-dark">
                 <tr>
                     <% for (let i=0; i < items.myObject.menuDetails.length; i++) {%>
@@ -63,7 +63,7 @@
         <div class="tabTitle">
             <span><%= items.myObject.nutrientsMenu %></span>
         </div>
-        <table class="table table-striped table-hover table-sm nutrientsTab">
+        <table class="table table-striped table-bordered table-hover table-sm nutrientsTab">
 
             <thead class="thead-dark">
                 <tr>
