--- a/views/partials/message.ejs
+++ b/views/partials/message.ejs
@@ -1,9 +1,40 @@
-<% if (items.errors != null) {%>
-<% for (var i=0; i < items.errors.length; i++) { %>
-<p class="alert alert-danger"><%= items.errors[i].msg %></span>
-    <% } %>
-    <% } %>
+<% if (typeof items.errors != 'undefined') { %>
+<%(items.errors).forEach(function(error) { %>
+<div class="alert alert-danger  alert-dismissible fade show" role="alert">
+    <%= error.msg %>
+    <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+        <span aria-hidden="true">&times;</span>
+    </button>
+</div>
 
-    <% if (items.msg != null) {%>
-<p class="alert alert-success"><%= items.msg %></span>
-    <% } %>
+<% }); %>
+
+<%} %>
+
+<% if (success_msg != '') { %>
+    <div class="alert alert-success alert-dismissible fade show" role="alert">
+        <%= success_msg %>
+        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+        </button>
+    </div>
+<% } %>
+
+<% if (error_msg != '') { %>
+    <div class="alert alert-danger  alert-dismissible fade show" role="alert">
+        <%= error_msg %>
+        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+        </button>
+    </div>
+<% } %>
+
+<% if (error != '') { %>
+    <div class="alert alert-danger  alert-dismissible fade show" role="alert">
+        <%= error %>
+        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+        </button>
+    </div>
+<% } %>
+
