--- a/views/user/login.ejs
+++ b/views/user/login.ejs
@@ -9,8 +9,9 @@
         integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
-    <link rel="stylesheet" type="text/css" href="/stylesheets/style.css" />
+
     <link rel="stylesheet" type="text/css" href="/stylesheets/login.css" />
+    <link rel="stylesheet" type="text/css" href="/stylesheets/style.css" />
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.13.0/css/all.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.13.0/css/v4-shims.css">
 </head>
@@ -18,13 +19,16 @@
 <body>
     <%- include ("../partials/navigation.ejs"); %>
     <div class="container">
-
-        <%- include ("../partials/message.ejs"); %>
+        <div class="alerts">
+            <%- include ("../partials/message.ejs"); %>
+        </div>
 
         <div class="d-flex justify-content-center align-items-center">
             <div class="card beauty_login">
                 <div class="card-header">
-                    <div class="logo"><img src="https://lh3.googleusercontent.com/proxy/_YAbqqAHnx__fw8oMzNig4JLyougl8g9Tba-n28vRD7LAOzMMl4kKxmHJ1Vj92pbtaPZSDONnoL8D82_30ABQwNhEv1keocQKRkZ" alt=""></div>
+                    <div class="logo"><img
+                            src="https://lh3.googleusercontent.com/proxy/_YAbqqAHnx__fw8oMzNig4JLyougl8g9Tba-n28vRD7LAOzMMl4kKxmHJ1Vj92pbtaPZSDONnoL8D82_30ABQwNhEv1keocQKRkZ"
+                            alt=""></div>
                     <div class="login_text d-flex flex-row justify-content-center align-items-center">
                         <span></span>
                         <span class="text px-1">LOGIN</span>
@@ -37,7 +41,7 @@
                 <div class="card-body">
                     <div class="login_container d-flex flex-column">
                         <form method="POST">
-                            <br> <br> <br>
+                            <br>
                             <% for (var i=0; i< items.myObject.login.form.length; i++) { %>
                             <label><%= items.myObject.login.form[i].label %></label>
                             <div class="input-group mb-3">
@@ -63,13 +67,13 @@
                     </div>
                 </div>
                 <div class="card-footer d-flex flex-column">
-                    <div class="d-flex justify-content-center align-items-center p-3">
-                        Dont have an account? <a href="#" class="ml-2">Click here</a>
+                    <div class="d-flex justify-content-center align-items-center p-3 texto">
+                        Dont have an account? <a href="/register" class="ml-2">Click here</a>
                     </div>
                 </div>
             </div>
         </div>
-       
+
     </div>
     <%- include ("../partials/footer.ejs"); %>
 </body>
