--- a/views/user/register.ejs
+++ b/views/user/register.ejs
@@ -3,12 +3,12 @@
 
 <head>
     <title>Document</title>
-
     <meta charset="UTF-8">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
         integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+    <link rel="stylesheet" type="text/css" href="/stylesheets/register.css" />
     <link rel="stylesheet" type="text/css" href="/stylesheets/style.css" />
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.13.0/css/all.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.13.0/css/v4-shims.css">
@@ -17,32 +17,62 @@
 <body>
     <%- include ("../partials/navigation.ejs"); %>
     <div class="container">
-        <h1><%= items.myObject.register.title %></h1>
-        <%- include ("../partials/message.ejs"); %>
-        <form method="POST" , action='./register'>
-            <br> <br> <br>
-            <% for (var i=0; i< items.myObject.register.form.length; i++) { %>
-                <label><%= items.myObject.register.form[i].label %></label>
-                <div class="input-group mb-3">
-                    <div class="input-group-prepend">
-                        <% if (items.myObject.register.form[i].name === "username")  {%>
-                        <span class="input-group-text" id="basic-addon1">@</span>
-                        <% } else {%>
-                        <span class="input-group-text" id="basic-addon1"><i
-                                class="<%= items.myObject.register.form[i].icon %>"></i></span>
-                        <% } %>
-                    </div>
-                    <input type="<%= items.myObject.register.form[i].type %>" class="form-control"
-                        placeholder="<%= items.myObject.register.form[i].placeholder %>"
-                        aria-label="<%= items.myObject.register.form[i].ariaLabel %>" aria-describedby="basic-addon1"
-                        name="<%= items.myObject.register.form[i].name %>" #<%= items.myObject.register.form[i].name %>
-                        required>
-                </div>
-            <% } %>
-            <br>
-            <button type="submit"><%= items.myObject.register.button %></button>
+        <div class="alerts">
+            <%- include ("../partials/message.ejs"); %>
+        </div>
 
-        </form>
+        <div class="d-flex justify-content-center align-items-center">
+            <div class="card beauty_login">
+                <div class="card-header">
+                    <div class="logo"><img
+                            src="https://lh3.googleusercontent.com/proxy/_YAbqqAHnx__fw8oMzNig4JLyougl8g9Tba-n28vRD7LAOzMMl4kKxmHJ1Vj92pbtaPZSDONnoL8D82_30ABQwNhEv1keocQKRkZ"
+                            alt=""></div>
+                    <div class="login_text d-flex flex-row justify-content-center align-items-center">
+                        <span></span>
+                        <span class="text px-1">LOGIN</span>
+                        <span></span>
+                    </div>
+                    <div class="login_with_text">
+                        Login with your username and password or using your social media
+                    </div>
+                </div>
+                <div class="card-body">
+                    <div class="login_container d-flex flex-column">
+                        <form method="POST" , action='./register'>
+                            <br>
+                            <% for (var i=0; i< items.myObject.register.form.length; i++) { %>
+                            <label><%= items.myObject.register.form[i].label %></label>
+                            <div class="input-group mb-3">
+                                <div class="input-group-prepend">
+                                    <% if (items.myObject.register.form[i].name === "username")  {%>
+                                    <span class="input-group-text" id="basic-addon1">@</span>
+                                    <% } else {%>
+                                    <span class="input-group-text" id="basic-addon1"><i
+                                            class="<%= items.myObject.register.form[i].icon %>"></i></span>
+                                    <% } %>
+                                </div>
+                                <input type="<%= items.myObject.register.form[i].type %>" class="form-control"
+                                    placeholder="<%= items.myObject.register.form[i].placeholder %>"
+                                    aria-label="<%= items.myObject.register.form[i].ariaLabel %>"
+                                    aria-describedby="basic-addon1" name="<%= items.myObject.register.form[i].name %>"
+                                    #<%= items.myObject.register.form[i].name %> required>
+                            </div>
+                            <% } %>
+                            <br>
+                            <button class="btn btn-info" type="submit"><%= items.myObject.register.button %></button>
+
+                        </form>
+                        </form>
+                    </div>
+                </div>
+                <div class="card-footer d-flex flex-column">
+                    <div class="d-flex justify-content-center align-items-center p-3 texto">
+                        Do have an account? <a href="/register" class="ml-2">Click here</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+
     </div>
     <%- include ("../partials/footer.ejs"); %>
 </body>
