JQuery y Ajax en tablas para búsquedas sin recargar

--- a/views/evaluation/evaluation.ejs
+++ b/views/evaluation/evaluation.ejs
@@ -40,7 +40,7 @@
                     </div>
                     <% } %>
                 </div>
-                <hr>
+                <hr style="border-color: rgb(46, 115, 124);">
         </div>
     </main>
     <%- include ("../partials/footer.ejs"); %>
