--- a/views/index.ejs
+++ b/views/index.ejs
@@ -33,7 +33,7 @@
                         <div class="features-icons-icon d-flex">
                             <i class="<%= items.myObject.homeIndex[i].icon%> fa-3x m-auto text-info"></i>
                         </div>
-                        <h2> <%= items.myObject.homeIndex[i].name %></h2>
+                        <h2 class="features-icons-icon"> <%= items.myObject.homeIndex[i].name %></h2>
                         <p class= "text-justify"><%= items.myObject.homeIndex[i].description %> </p>
                         <p><a class="btn btn-info" href="<%= items.myObject.homeIndex[i].href %>" role="button">Ver más &raquo;</a></p>
                     </div>
@@ -41,7 +41,7 @@
                 <% } %>
             </div>
 
-            <hr>
+            <hr style="border-color: rgb(46, 115, 124);">
 
             <div class="row">
          
