--- a/public/stylesheets/dish.css
+++ b/public/stylesheets/dish.css
@@ -1,40 +1,68 @@
-.title{
-
-    margin-bottom: 50px;
-    font-size: 30px;
-    font-weight: bold;
-    height: 0px;
-    width: 100%;
+.title {
+  margin-bottom: 50px;
+  font-size: 30px;
+  font-weight: bold;
+  height: 0px;
+  width: 100%;
 }
 
-.descriptionDish{
-    width: 600px;
-    height: 100px;
-    margin: -20px 20px 0px 0px;
-    text-align: justify;
-    font-size: 1em;
-
+.container{
+  font-weight: 500;
+  font-size: medium;
 }
 
-.btn-enlace{
-    margin: 30px 20px 0px 0px;
-    box-shadow: 5px 5px 5px 0px rgba(104, 100, 100, 0.637);
+h1{
+  margin-top: 40px;
+  margin-bottom: 40px;
+  text-align: center;
+  font-size: 50px;
+  color: #0c0c0c;
+  text-shadow: 3px 2px 2px rgb(100, 103, 104);
 }
 
-.imageDish{
-    margin: -20px 20px 0px 0px;
-    border: 2px solid rgba(31, 37, 36, 0.781);
-    box-shadow: 5px 5px 5px 0px rgba(104, 100, 100, 0.4);
-    width: 250px;
-    height: 170px;
-
+.descriptionDish {
+  width: 600px;
+  height: 100px;
+  margin: -20px 20px 0px 0px;
+  text-align: justify;
+  font-size: 1em;
 }
 
-.divImg{
+.btn-enlace {
+  margin: 30px 20px 0px 0px;
+  box-shadow: 5px 5px 5px 0px rgba(104, 100, 100, 0.637);
+}
 
+
+.imageDish {
+  margin: -20px 20px 0px 0px;
+  border: 2px solid rgba(31, 37, 36, 0.781);
+  box-shadow: 5px 5px 5px 0px rgba(104, 100, 100, 0.4);
+  width: 250px;
+  height: 170px;
 }
-.tabTitle{
-    font-weight: bold;
-    font-size: 1em;
-    margin-bottom: 10px;
+
+.card{
+  box-shadow: 10px 10px 5px 0px rgba(170, 167, 167, 0.6);
+  border: 2px solid grey;
+  background-image:  radial-gradient(ellipse at center, rgb(255, 255, 255) 0%, rgb(253, 250, 250) 100%);
+
+  padding: 20px;
+  margin-bottom: 20px;
 }
+
+.spanColor {
+  background: linear-gradient(
+    to top,
+    rgba(146, 221, 205, 1) 0%,
+    rgba(7, 110, 128, 1) 100%
+  );
+  color: #ffffff;
+}
+
+.tabTitle {
+  font-weight: bold;
+  font-size: 1em;
+  margin-bottom: 10px;
+}
+
