--- a/public/stylesheets/food.css
+++ b/public/stylesheets/food.css
@@ -6,6 +6,7 @@ body{
 }
 
 .search {
+
   width: 100%;
   position: relative;
   display: flex;
@@ -40,6 +41,7 @@ body{
 
 
 .wrap{
+  margin-top: 40px;
   width: 40%;
   position: relative;
   top: 50%;
