--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,229 +1,296 @@
 html {
-    position: relative;
-    min-height: 100%;
+  position: relative;
+  min-height: 100%;
 }
 
 body {
-    margin-bottom: 60px;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-
+  margin-bottom: 60px;
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
 }
 
 .container {
-    margin-bottom: 120px;
+  margin-bottom: 120px;
 }
 
-.jilorioInfo{
-    height: 50%;
-    width: 50%;
-    color: rgba(255, 255, 255, 0.897);
+.jilorioInfo {
+  height: 50%;
+  width: 50%;
+  color: rgba(255, 255, 255, 0.897);
 
-    padding: 10px 40px 15px 40px;
-    color: rgba(255, 255, 255, 0.897);
-    background-color: rgba(31, 37, 36, 0.92);
-    /* background-color:  rgba(172, 189, 186, 0.70);  */
+  padding: 10px 40px 15px 40px;
+  color: rgba(255, 255, 255, 0.897);
+  background-color: rgba(31, 37, 36, 0.92);
+  /* background-color:  rgba(172, 189, 186, 0.70);  */
 }
 
-.footer {    
-    position: absolute;
-    bottom: 0;
-    width: 100%;
-    height: 60px;
-    line-height: 60px; 
-    background-color: rgb(31, 37, 36); 
-    border-top: 2px solid  rgba(172, 189, 186, 0.20);
+.footer {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  height: 60px;
+  line-height: 60px;
+  background-color: rgb(31, 37, 36);
+  border-top: 2px solid rgba(172, 189, 186, 0.2);
 }
 
-.display-4{
-    font-size: 4.5em ;
-    font-weight: bold;
+.display-4 {
+  font-size: 4.5em;
+  font-weight: bold;
 }
 
-.jumbotron{
+.jumbotron {
+  /* background-color: rgba(172, 189, 186, 0.20); */
+  background-image: url("../images/carousel.jpg");
+  background-size: cover;
+  background-repeat: no-repeat;
+}
 
-    /* background-color: rgba(172, 189, 186, 0.20); */
-    background-image:url("../images/carousel.jpg");
-    background-size: cover;
-    background-repeat: no-repeat;
+.infoPage {
+  width: 100%;
+  height: 40px;
+  margin-top: 30px;
+  text-shadow: 2px 2px 2px rgb(100, 103, 104);
 }
 
 
-.infoPage{
-    width: 100%;
-    height: 40px;
-    margin-top: 30px;
-  
+
+.row {
+  margin-top: 50px;
+  margin-bottom: 50px;
 }
 
-
-
-.row{
-    margin-top: 50px;
-    margin-bottom: 50px;
+.features-icons-icon {
+  margin-bottom: 15px;
 }
 
-.features-icons-icon{
-    margin-bottom: 15px;
+.features-icons-icon:hover {
+  transform: scale(1.18);
 }
 
-.features-icons-icon:hover{
-    transform: scale(1.18)
+.infoPage span {
+    font-family: sans-serif;
+  font-weight: bold;
+  font-size: 40px;
+
 }
 
-.infoPage span{
-    font-weight: bold;
-    font-size: 35px;
-}
-
-  
 .footer > .container {
-    padding-right: 15px;
-    padding-left: 15px;
-}
-  
-.izq{
-    display: block;
-    float: left;
-    font-weight: initial;
-    color:rgba(255, 255, 255, 0.699);
+  padding-right: 15px;
+  padding-left: 15px;
 }
 
-.der{
-    display: block;
-    float: right;    
-    font-weight: initial;
-    color:rgba(255, 255, 255, 0.699);
+.izq {
+  display: block;
+  float: left;
+  font-weight: initial;
+  color: rgba(255, 255, 255, 0.699);
 }
 
-nav{
-    background-color: #1f2524;
+.der {
+  display: block;
+  float: right;
+  font-weight: initial;
+  color: rgba(255, 255, 255, 0.699);
 }
 
-
-
-.table{
-    text-align: center;
-    margin-bottom: 40px;
-    border: 2px solid rgb(46, 115, 124);
-    border-collapse: collapse;
-    box-shadow: 10px 10px 5px 0px rgba(170, 167, 167, 0.6);
+nav {
+  background-color: #1f2524;
 }
 
-
-.jumbotronPlatos{
-    min-height: 400px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    /* background-color: rgba(252, 247, 0, 0.25); */
-    background-image:url("../images/platos.jpg");  
+h1 {
+  margin-top: 40px;
+  text-align: justify;
+  font-size: 50px;
+  color: #ffffff;
+  text-shadow: 3px 2px 2px rgb(100, 103, 104);
 }
 
-.platos{
-    width: 30%;
-    min-height: 300px;
-    box-shadow: 10px 10px 5px 0px rgba(0, 0, 0, 0.6);
+.table {
+  text-align: center;
+  margin-bottom: 40px;
+  border: 2px solid rgb(46, 115, 124);
+  border-collapse: collapse;
+  box-shadow: 10px 10px 5px 0px rgba(170, 167, 167, 0.6);
 }
 
-.jumbotronMenus{
-    min-height: 400px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    /* background-color: rgba(0, 255, 213, 0.25);
+.jumbotronPlatos {
+  min-height: 400px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  /* background-color: rgba(252, 247, 0, 0.25); */
+  background-image: url("../images/platos.jpg");
+}
+
+.platos {
+  width: 30%;
+  min-height: 300px;
+  box-shadow: 10px 10px 5px 0px rgba(0, 0, 0, 0.6);
+}
+
+.jumbotronMenus {
+  min-height: 400px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  /* background-color: rgba(0, 255, 213, 0.25);
      */
-     background-image:url("../images/menu.jpg");  
-
+  background-image: url("../images/menu.jpg");
 }
 
-.menus{
-    width: 30%;
-    min-height: 300px;
-    box-shadow: 10px 10px 5px 0px rgba(0, 0, 0, 0.6);
+.menus {
+  width: 30%;
+  min-height: 300px;
+  box-shadow: 10px 10px 5px 0px rgba(0, 0, 0, 0.6);
 }
 
-.jumbotronPlanificacion{
-    min-height: 400px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    /* background-color: rgba(0, 153, 255, 0.25); */
-        background-image:url("../images/planificacion.jpg"); 
+.jumbotronPlanificacion {
+  min-height: 400px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  /* background-color: rgba(0, 153, 255, 0.25); */
+  background-image: url("../images/planificacion.jpg");
 }
 
-.planificacion{
-    min-width: 420px;
-    min-height: 250px;
-    box-shadow: 10px 10px 5px 0px rgba(0, 0, 0, 0.6);
+.page-item.active .page-link {
+  background: linear-gradient(
+    to top,
+    rgba(146, 221, 205, 1) 0%,
+    rgba(7, 110, 128, 1) 100%
+  );
+  border: 2px solid rgb(46, 115, 124);
 }
 
-.jumbotronRecomendation{
-    min-height: 400px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    /* background-color: rgba(0, 153, 255, 0.25); */
-        background-image:url("../images/carne.jpg"); 
+.planificacion {
+  min-width: 420px;
+  min-height: 250px;
+  box-shadow: 10px 10px 5px 0px rgba(0, 0, 0, 0.6);
 }
 
-.recomendation{
-    min-width: 420px;
-    min-height: 250px;
-    box-shadow: 10px 10px 5px 0px rgba(0, 0, 0, 0.6);
+.jumbotronRecomendation {
+  min-height: 400px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  /* background-color: rgba(0, 153, 255, 0.25); */
+  background-image: url("../images/carne.jpg");
 }
 
-
-.jumbotronRecomendation{
-    min-height: 400px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    /* background-color: rgba(0, 153, 255, 0.25); */
-        background-image:url("../images/recomendacion.jpg"); 
+.recomendation {
+  min-width: 420px;
+  min-height: 250px;
+  box-shadow: 10px 10px 5px 0px rgba(0, 0, 0, 0.6);
 }
 
-.recomendation{
-    min-width: 420px;
-    min-height: 250px;
-    box-shadow: 10px 10px 5px 0px rgba(0, 0, 0, 0.6);
+.jumbotronRecomendation {
+  min-height: 400px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  /* background-color: rgba(0, 153, 255, 0.25); */
+  background-image: url("../images/recomendacion.jpg");
 }
 
-
-.jumbotronEvaluation{
-    min-height: 400px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    /* background-color: rgba(0, 153, 255, 0.25); */
-        background-image:url("../images/evaluacion.jpg"); 
+.recomendation {
+  min-width: 420px;
+  min-height: 250px;
+  box-shadow: 10px 10px 5px 0px rgba(0, 0, 0, 0.6);
 }
 
-.evaluation{
-    min-width: 420px;
-    min-height: 250px;
-    box-shadow: 10px 10px 5px 0px rgba(0, 0, 0, 0.6);
+.jumbotronEvaluation {
+  min-height: 400px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  /* background-color: rgba(0, 153, 255, 0.25); */
+  background-image: url("../images/evaluacion.jpg");
 }
 
-.jumbotronFood{
-    min-height: 400px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    /* background-color: rgba(0, 153, 255, 0.25); */
-        background-image:url("../images/alimentos.png"); 
+.evaluation {
+  min-width: 420px;
+  min-height: 250px;
+  box-shadow: 10px 10px 5px 0px rgba(0, 0, 0, 0.6);
 }
 
-.food{
-    min-width: 420px;
-    min-height: 250px;
-    box-shadow: 10px 10px 5px 0px rgba(0, 0, 0, 0.6);
+.jumbotronFood {
+  min-height: 400px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  /* background-color: rgba(0, 153, 255, 0.25); */
+  background-image: url("../images/alimentos.png");
 }
 
+.food {
+  min-width: 420px;
+  min-height: 250px;
+  box-shadow: 10px 10px 5px 0px rgba(0, 0, 0, 0.6);
+}
 
-a{
-    color: white;
+a {
+  color: white;
 }
 
 table td {
-   max-width: 400px;
-   }
+  max-width: 400px;
+}
+
+@import url(https://fonts.googleapis.com/css?family=Open + Sans);
+
+body {
+  background: #f2f2f2;
+  font-family: "Open Sans", sans-serif;
+}
+
+.search {
+  width: 100%;
+  position: relative;
+  display: flex;
+}
+
+.searchTerm {
+  width: 100%;
+  border: 3px solid #00b4cc;
+  border-right: none;
+  padding: 5px;
+  height: 36px;
+  border-radius: 5px 0 0 5px;
+  outline: none;
+  color: #9dbfaf;
+}
+
+.searchTerm:focus {
+  color: #00b4cc;
+}
+
+.searchButton {
+  width: 40px;
+  height: 36px;
+  border: 1px solid #00b4cc;
+  background: #00b4cc;
+  text-align: center;
+  color: #fff;
+  border-radius: 0 5px 5px 0;
+  cursor: pointer;
+  font-size: 20px;
+}
+
+.wrap {
+  margin-top: 60px;
+  margin-bottom: -30px;
+  width: 40%;
+  position: relative;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.spanColor {
+    background: linear-gradient(
+      to top,
+      rgba(146, 221, 205, 1) 0%,
+      rgba(7, 110, 128, 1) 100%
+    );
+    color: #ffffff;
+  }
