--- a/views/dish/getDish.ejs
+++ b/views/dish/getDish.ejs
@@ -7,7 +7,9 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
         integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
-        <script defer src="../../public/javascripts/dish.js"></script>
+        <!-- <script  src="../../public/javascripts/dish.js"></script> -->
+        <!-- <script src="jquery-3.5.1.min.js"></script> -->
+        <!-- <script defer src="../../public/javascripts/dishJQuery.js"></script> -->
     
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
@@ -29,14 +31,14 @@
             <span> <%= items.myObject.infoPage.platos %> </span>
         </div>
 
-        <hr>
+        <hr style="border-color: rgb(46, 115, 124);">
         <br>
         <form method="POST">
             <div class="wrap">
                 <div class="search">
                     <input type="text" name="_id" class="searchTerm" placeholder="<%= items.myObject.busqueda %>">
                     <a id="submit-form-link" href="#"></a>
-                    <button type="submit" class="searchButton">
+                    <button type="submit" class="spanColor searchButton">
                         <i class="fa fa-search"></i>
                     </button>
                 </div>
