--- a/views/dish/insertDish.ejs
+++ b/views/dish/insertDish.ejs
@@ -11,9 +11,22 @@
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"
         integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
-    <link rel="stylesheet" type="text/css" href="/stylesheets/style.css" />
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.13.0/css/all.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.13.0/css/v4-shims.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/css/bootstrap.css">
+    <link rel="stylesheet" href="https://cdn.datatables.net/1.10.21/css/dataTables.bootstrap4.min.css">
+    <link rel="stylesheet" type="text/css" href="/stylesheets/style.css" />
+    <link rel="stylesheet" type="text/css" href="/stylesheets/dish.css" />
+
+
+    <!-- JQUERY AUTOCOMPLETE -->
+    <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
+    <link rel="stylesheet" href="/resources/demos/style.css">
+    <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
+    <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+
+
+
 </head>
 
 <body>
@@ -21,73 +34,145 @@
     <div class="container">
         <h1><%= items.myObject.dish.title %></h1>
         <%- include ("../partials/message.ejs"); %>
-        <form method="POST" , action='./insert'>
-            <br> <br> <br>
-            <% for (var i=0; i< items.myObject.dish.form.length; i++) { %>
-            <label><%= items.myObject.dish.form[i].label %></label>
-            <div class="input-group mb-3">
-                <div class="input-group-prepend">
-                    <% if (items.myObject.dish.form[i].name === "username")  {%>
-                    <span class="input-group-text" id="basic-addon1">@</span>
-                    <% } else {%>
-                    <span class="input-group-text" id="basic-addon1"><i
-                            class="<%= items.myObject.dish.form[i].icon %>"></i></span>
-                    <% } %>
-                </div>
-                <input type="<%= items.myObject.dish.form[i].type %>" class="form-control"
-                    placeholder="<%= items.myObject.dish.form[i].placeholder %>"
-                    aria-label="<%= items.myObject.dish.form[i].ariaLabel %>" aria-describedby="basic-addon1"
-                    name="<%= items.myObject.dish.form[i].name %>" #<%= items.myObject.dish.form[i].name %>>
-            </div>
-            <% } %>
 
-
-            <br><br>
+        <div class="card">
             <form method="POST" , action='./insert'>
-                <div class="wrap">
-                    <div class="search">
-                        <input type="text" name="shrt_desc" class="searchTerm"
-                            placeholder="<%= items.myObject.busqueda %>">
-                        <a id="submit-form-link" href="#"></a>
-                        <button type="submit" class="searchButton">
-                            <i class="fa fa-search"></i>
-                        </button>
-                    </div>
-                </div>
                 <br>
+                <% for (var i=0; i< items.myObject.dish.form.length; i++) { %>
+                <label><%= items.myObject.dish.form[i].label %></label>
+                <div class="input-group mb-3">
+                    <div class="input-group-prepend">
+                        <% if (items.myObject.dish.form[i].name === "username")  {%>
+                        <span class="spanColor input-group-text" id="basic-addon1">@</span>
+                        <% } else {%>
+                        <span class=" spanColor input-group-text" id="basic-addon1"><i
+                                class="  <%= items.myObject.dish.form[i].icon %>"></i></span>
+                        <% } %>
+                    </div>
+                    <input type="<%= items.myObject.dish.form[i].type %>" class="form-control"
+                        placeholder="<%= items.myObject.dish.form[i].placeholder %>"
+                        aria-label="<%= items.myObject.dish.form[i].ariaLabel %>" aria-describedby="basic-addon1"
+                        name="<%= items.myObject.dish.form[i].name %>" #<%= items.myObject.dish.form[i].name %>>
+                </div>
+                <% } %>
 
-                <table class="table table-bordered table-hover table-sm">
-                    <caption>Lista de alimentos</caption>
-                    <thead>
-                        <tr>
-                            <th> CheckBox </th>
-                            <% for (var i=0; i< items.myObject.tablaAlimentos.nombres.length; i++) { %>
-                            <th> <%- items.myObject.tablaAlimentos.nombres[i] %> </th>
-                            <% } %>
-                            
-                        </tr>
-                    </thead>
-                    <tbody>
-                        <tr>
-                            <% for (var i=0; i< items.myDocs.length; i++) { %>
-                        </tr>
-                        <td>  <input type="checkbox" name="group[]" value="<%= items.myDocs[i].shrt_desc %>"> </td>
+        </div>
+
+        <br>
+        <div class="card">
+            <form method="POST" , action='./insert'>
+                <br>
+                <% for (var i=0; i< items.myObject.dish.formIngredientes.length; i++) { %>
+                <label><%= items.myObject.dish.formIngredientes[i].label %></label>
+                <div class="input-group mb-3">
+                    <div class="input-group-prepend">
+                        <span class=" spanColor input-group-text" id="basic-addon1"><i
+                                class="  <%= items.myObject.dish.formIngredientes[i].icon %>"></i></span>
+
+                    </div>
+                    <input id="searchIngredient" type="<%= items.myObject.dish.formIngredientes[i].type %>"
+                        class="form-control" placeholder="<%= items.myObject.dish.formIngredientes[i].placeholder %>"
+                        aria-label="<%= items.myObject.dish.formIngredientes[i].ariaLabel %>"
+                        aria-describedby="basic-addon1" name="<%= items.myObject.dish.formIngredientes[i].name %>"
+                        #<%= items.myObject.dish.formIngredientes[i].name %>>
+                </div>
+                <% } %>
+        </div>
+        <form method="POST" id="search" , action='./insert'>
+            <div class="wrap">
+                <div class="search">
+                    <input type="text" name="shrt_desc" class="searchTerm" placeholder="<%= items.myObject.busqueda %>">
+                    <a id="submit-form-link" href="#"></a>
+                    <button type="submit" class="spanColor searchButton">
+                        <i class="fa fa-search"></i>
+                    </button>
+                </div>
+            </div>
+ 
+
+            <% if ((items.myObject.tablaAlimentos.valores.length) > 0) { %>
+            <table id="alimentos" class="table table-bordered table-hover table-sm">
+                <thead class="thead-dark">
+                    <tr>
+
+                        <% for (var i=0; i< items.myObject.tablaAlimentos.nombres.length; i++) { %>
+                        <th> <%- items.myObject.tablaAlimentos.nombres[i] %> </th>
+                        <% } %>
+
+                    </tr>
+                </thead>
+
+                <tbody>
+
+                    <% for (var i=0; i< items.myDocs.length; i++) { %>
+
+                    <tr>
                         <% for (var j=0; j< items.myObject.tablaAlimentos.valores.length; j++) { %>
+                        <% if ((items.myDocs[i][items.myObject.tablaAlimentos.valores[j]]) === "") { %>
+                        <td> - </td>
+                        <% } else { %>
                         <td> <%= items.myDocs[i][items.myObject.tablaAlimentos.valores[j]] %> </td>
                         <% } %>
-                      
                         <% } %>
-                    </tbody>
-                </table>
-                <br><br>
-                <input type="submit" name="submit" class="btn btn-info" value="Submit" />
-            </form>
+                    </tr>
+                    <% } %>
+                </tbody>
+
+            </table>
+            <% } %>
+            <br><br>
+            <input type="submit" name="submit" class="btn btn-info" value="Submit" />
         </form>
+        </form>
+
+        <script>
+            $(function () {
+                $("#searchIngredient").autocomplete({
+                    source: function (req, res) {
+                        $.ajax({
+                            url: "insert/autocomplete/",
+                            dataType: "jsonp",
+                            type: "GET",
+                            data: req,
+                            success: function (data) {
+                                // console.log(data);
+                                res(data);
+                            },
+                            error: function (err) {
+                                console.log(err);
+                            }
+                        });
+                    },
+                    minLength: 1,
+                    select: function (event, ui) {
+                        if (ui.item) {
+                            $('#searchIngredient').text(ui.item.label);
+
+                        }
+                    }
+                })
+            });
+        </script>
 
     </div>
     <%- include ("../partials/footer.ejs"); %>
+
+
 </body>
 
+<script>
+    $(document).ready(function () {
+        $('#alimentos').DataTable({
+            "language": {
+                "emptyTable": " "
+            }
+        });
+
+    });
+</script>
+<!-- BOOTSTRAP TABLE -->
+<!-- <script src="https://code.jquery.com/jquery-3.5.1.js"></script> -->
+<script src="https://cdn.datatables.net/1.10.21/js/jquery.dataTables.min.js"></script>
+<script src="https://cdn.datatables.net/1.10.21/js/dataTables.bootstrap4.min.js"></script>
 
 </html>
-
