--- a/views/food/getFood.ejs
+++ b/views/food/getFood.ejs
@@ -14,7 +14,11 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.13.0/css/all.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.13.0/css/v4-shims.css">
-
+    <!-- JQUERY AUTOCOMPLETE -->
+    <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
+    <link rel="stylesheet" href="/resources/demos/style.css">
+    <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
+    <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
 
 </head>
 
@@ -26,7 +30,7 @@
             <i class="fas fa-list-alt fa-2x"></i>
             <span> <%= items.myObject.infoPage.alimentos %> </span>
         </div>
-        <hr>
+        <hr style="border-color: rgb(46, 115, 124);">
         <%- messages('message', locals) %>
         <br>
         <form method="POST">
@@ -34,7 +38,7 @@
                 <div class="search">
                     <input type="text" name="shrt_desc" class="searchTerm" placeholder="<%= items.myObject.busqueda %>">
                     <a id="submit-form-link" href="#"></a>
-                    <button type="submit" class="searchButton">
+                    <button type="submit" class="spanColor searchButton">
                         <i class="fa fa-search"></i>
                         <!--     <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
     <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button> -->
@@ -42,31 +46,55 @@
                 </div>
             </div>
         </form>
-        <br><br>
 
 
-        <table class="table table-bordered table-hover">
-            <caption>Lista de alimentos</caption>
-            <thead>
-                <tr>
-                    <% for (var i=0; i< items.myObject.tablaAlimentos.nombres.length; i++) { %>
-                    <th> <%- items.myObject.tablaAlimentos.nombres[i] %> </th>
-                    <% } %>
-                </tr>
-            </thead>
-            <tbody>
-                <tr>
+        <% if ((items.myObject.tablaAlimentos.valores.length) > 0) { %>
+            <table id="alimentos" class="table table-bordered table-hover table-sm">
+                <thead class="thead-dark">
+                    <tr>
+
+                        <% for (var i=0; i< items.myObject.tablaAlimentos.nombres.length; i++) { %>
+                        <th> <%- items.myObject.tablaAlimentos.nombres[i] %> </th>
+                        <% } %>
+
+                    </tr>
+                </thead>
+
+                <tbody>
+
                     <% for (var i=0; i< items.myDocs.length; i++) { %>
-                </tr>
-                <% for (var j=0; j< items.myObject.tablaAlimentos.valores.length; j++) { %>
-                <td> <%= items.myDocs[i][items.myObject.tablaAlimentos.valores[j]] %> </td>
-                <% } %>
-                <% } %>
-            </tbody>
-        </table>
 
+                    <tr>
+                        <% for (var j=0; j< items.myObject.tablaAlimentos.valores.length; j++) { %>
+                        <% if ((items.myDocs[i][items.myObject.tablaAlimentos.valores[j]]) === "") { %>
+                        <td> - </td>
+                        <% } else { %>
+                        <td> <%= items.myDocs[i][items.myObject.tablaAlimentos.valores[j]] %> </td>
+                        <% } %>
+                        <% } %>
+                    </tr>
+                    <% } %>
+                </tbody>
+
+            </table>
+            <% } %>
     </div>
     <%- include ("../partials/footer.ejs"); %>
+
+    <script>
+        $(document).ready(function () {
+            $('#alimentos').DataTable({
+                "language": {
+                    "emptyTable": " "
+                }
+            });
+    
+        });
+    </script>
+    <!-- BOOTSTRAP TABLE -->
+    <!-- <script src="https://code.jquery.com/jquery-3.5.1.js"></script> -->
+    <script src="https://cdn.datatables.net/1.10.21/js/jquery.dataTables.min.js"></script>
+    <script src="https://cdn.datatables.net/1.10.21/js/dataTables.bootstrap4.min.js"></script>
 </body>
 
 
