--- a/views/menu/menuDetails.ejs
+++ b/views/menu/menuDetails.ejs
@@ -30,7 +30,7 @@
             <i class="fas fa-list-alt fa-2x"></i>
             <span> <%= items.myDocs._id %> </span>
         </div>
-        <hr>
+        <hr style="border-color: rgb(46, 115, 124);">
         <div class="row justify-content-between">
             <div class="col-8">
                 <p class="descriptionDish"> <%= items.myDocs.description %> </p>
