--- a/views/planification/getPlanification.ejs
+++ b/views/planification/getPlanification.ejs
@@ -29,14 +29,14 @@
             <span> <%= items.myObject.infoPage.planificacion %> </span>
         </div>
 
-        <hr>
+        <hr style="border-color: rgb(46, 115, 124);">
         <br>
         <form method="POST">
             <div class="wrap">
                 <div class="search">
                     <input type="text" name="_id" class="searchTerm" placeholder="<%= items.myObject.busqueda %>">
                     <a id="submit-form-link" href="#"></a>
-                    <button type="submit" class="searchButton">
+                    <button type="submit" class="spanColor searchButton">
                         <i class="fa fa-search"></i>
                     </button>
                 </div>
