--- a/views/planification/planification.ejs
+++ b/views/planification/planification.ejs
@@ -40,7 +40,7 @@
                     </div>
                     <% } %>
                 </div>
-                <hr>
+                <hr style="border-color: rgb(46, 115, 124);">
         </div>
     </main>
     <%- include ("../partials/footer.ejs"); %>
