--- a/views/user/login.ejs
+++ b/views/user/login.ejs
@@ -27,11 +27,11 @@
             <div class="card beauty_login">
                 <div class="card-header">
                     <div class="logo"><img
-                            src="https://lh3.googleusercontent.com/proxy/_YAbqqAHnx__fw8oMzNig4JLyougl8g9Tba-n28vRD7LAOzMMl4kKxmHJ1Vj92pbtaPZSDONnoL8D82_30ABQwNhEv1keocQKRkZ"
+                            src="https://cdn.pixabay.com/photo/2016/11/14/17/39/person-1824144_960_720.png"
                             alt=""></div>
                     <div class="login_text d-flex flex-row justify-content-center align-items-center">
                         <span></span>
-                        <span class="text px-1">LOGIN</span>
+                        <span class="text px-1">INICIO DE SESIÓN</span>
                         <span></span>
                     </div>
                     <div class="login_with_text">
@@ -61,12 +61,14 @@
                             </div>
                             <% } %>
                             <br>
+                            <div class="d-flex justify-content-center align-items-center">
                             <button class="btn btn-info" type="submit"><%= items.myObject.login.button %></button>
+                        </div>
 
                         </form>
                     </div>
                 </div>
-                <div class="card-footer d-flex flex-column">
+                <div class="card-footer d-flex flex-column ">
                     <div class="d-flex justify-content-center align-items-center p-3 texto">
                         Dont have an account? <a href="/register" class="ml-2">Click here</a>
                     </div>
