--- a/public/stylesheets/dish.css
+++ b/public/stylesheets/dish.css
@@ -51,6 +51,26 @@ h1{
   margin-bottom: 20px;
 }
 
+
+.cardInside{
+  box-shadow: 10px 10px 5px 0px rgba(170, 167, 167, 0.6);
+  border: 2px solid grey;
+  background-image:  radial-gradient(ellipse at center, rgb(255, 255, 255) 0%, rgb(253, 250, 250) 100%);
+  padding: 20px;
+
+}
+
+.ingredienteAdd{
+  background-color: rgb(255, 255, 255);
+  box-shadow: 10px 10px 5px 0px rgba(170, 167, 167, 0.6);
+  border: 1px solid rgb(7, 7, 7);
+  padding: 10px;
+  margin-bottom: 20px;
+  weight: 50%;
+  border-radius: 15px;
+
+}
+
 .spanColor {
   background: linear-gradient(
     to top,
